# rzone

./: README.md  run_19x19.sh  run_7x7.sh
CGI/: BaseCNNNet.h  BaseCNNPlayoutGenerator.cpp  BaseCNNPlayoutGenerator.h  BaseJobQueue.h  BasicType.h  BoardMoveStack.h  BoardStatus.h  BoardTranspositionTable.h  BoundingBox.h  CGI.vcxproj  CGI.vcxproj.filters  CMakeLists.txt  CNNJobQueue.h  CandidateEntry.h  CandidateList.h  Color.h  ColorMessage.h  DCNNNetCollection.h  DCNNNetResult.h  DbHashTable.cpp  DbHashTable.h  DbMove.cpp  DbMove.h  DbOpening.cpp  DbOpening.h  Dual.h  FeatureIndexList.h  FeaturePtrList.h  FileDirectoryExplorer.h  GameInfo.h  GenSgf.cpp  GenSgf.h  GtpColorGradient.h  GtpRGBColor.h  HappyGoMain.cpp  IsomorphicMinHashKey.cpp  IsomorphicMinHashKey.h  LinkListHashTable.h  Makefile  MoveLocation.cpp  (+252 more)
CGI/Debug/Win32/: CGI.vcxprojResolveAssemblyReference.cache
CGI/Release/x64/: CGI.vcxprojResolveAssemblyReference.cache
CGI/Release/x64/CGI.tlog/: CGI.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
MCTPS/: BaseDecisionMaker.h  BaseGtpEngine.cpp  BaseGtpEngine.h  BasePlayoutAgent.h  BasePrunePolicy.h  BaseRootShifter.h  BaseStopCondition.h  BaseThreadState.h  BaseUctAccessor.h  BaseUctNode.h  BitBoard.h  CMakeLists.txt  ClusterLogger.h  Configure.cpp  Configure.h  ConfigureLoader.cpp  ConfigureLoader.h  HashKey64.h  Invoker.cpp  Invoker.h  Logger.cpp  Logger.h  MCTPS.vcxproj  MCTPS.vcxproj.filters  Makefile  MasterThread.h  MonteCarlo.h  NodeAllocator.h  NodePage.h  NodePtr.h  NodeRecycler.h  PageAllocator.h  ProgramOption.cpp  Random.cpp  (+16 more)
(+387 files in other folders)
