FILE(GLOB SRCS "*.cpp" "sqlite3.c")
ADD_EXECUTABLE(CGI ${SRCS})

FIND_PACKAGE(Boost COMPONENTS filesystem regex system)

SET(LIBS ${Boost_THREAD_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${Boost_SYSTEM_LIBRARY} ${Boost_REGEX_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_RANDOM_LIBRARY})

IF(USE_CAFFE)
	FIND_PACKAGE(Caffe QUIET)
	IF(NOT Caffe_FOUND)
		message(FATAL_ERROR "Could NOT find Caffe")
	ENDIF()
	INCLUDE_DIRECTORIES(${Caffe_INCLUDE_DIRS})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_CAFFE")
	SET(LIBS ${LIBS} ${Caffe_LIBRARIES})
ENDIF()

IF(USE_CAFFE2)
	FIND_PACKAGE(Caffe2 REQUIRED)	
	FIND_PACKAGE(Eigen3 REQUIRED)
	FIND_PACKAGE(CUDA REQUIRED)
	IF(NOT Caffe2_FOUND)
		message(FATAL_ERROR "Could NOT find Caffe2")
	ENDIF()
	
	message( "-- Found Eigen3: ${EIGEN3_INCLUDE_DIR}")
	
	INCLUDE_DIRECTORIES(${Caffe2_INCLUDE_DIR} ${EIGEN3_INCLUDE_DIR} /usr/local/cuda/include )
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_CAFFE2")
	SET(LIBS ${LIBS} ${Caffe2_LIBRARY} ${CUDA_LIBRARIES} ${CUDA_curand_LIBRARY} "-lglog -lprotobuf")
ENDIF()

TARGET_LINK_LIBRARIES(CGI MCTPS ${LIBS} ${CMAKE_DL_LIBS})

